--- a/jump/Makefile.me
+++ b/jump/Makefile.me
@@ -1,33 +1,38 @@
+# -*- makefile -*-
 #for GNU make
 
-FILES = SFMTst.h \
-	SFMT-params.h \
-	SFMTst.c \
-	SFMT-common.h \
-	SFMT-params607.h \
-	SFMT-params1279.h \
-	SFMT-params2281.h \
-	SFMT-params4253.h \
-	SFMT-params11213.h \
-	SFMT-params19937.h \
-	SFMT-params44497.h \
-	SFMT-params86243.h \
-	SFMT-params132049.h \
-	SFMT-params216091.h \
-	SFMT-jump.h \
+#DDEBUG = -O0 -g -ggdb -DDEBUG=1
+
+# uncomment next line if you installed NTL with gf2x
+LIBGF2X = -lgf2x
+# uncomment next line if you installed NTL with gmp
+#LIBGMP = -lgmp
+
+DEFINES = -D__STDC_CONSTANT_MACROS=1 -D__STDC_FORMAT_MACROS=1
+CPP = g++
+#CPP = icc
+GPPFLAGS = -msse2
+#ICCPPFLAGS = -mssse3
+
+CC = gcc
+#CC = icc -fast
+GCCFLAGS = -msse2 --param max-inline-insns-single=1800
+#ICCFLAGS = -fast
+OPTI = -O3 -finline-functions -fomit-frame-pointer
+CCSTD = -std=c99
+WARN = -Wall #-Winline
+SSE2FLAGS = -msse2 -DHAVE_SSE2
+CCFLAGS = -Wmissing-prototypes -I../ $(SSE2FLAGS) $(GCCFLAGS) $(ICCFLAGS) \
+	$(OPTI) $(WARN) $(CCSTD) $(DDEBUG)
+CPPFLAGS = -I../ $(SSE2FLAGS) $(OPTI) $(GPPFLAGS) $(ICCPPFLAGS) $(WARN) \
+	$(DEFINES) $(DDEBUG)
+
+LINKOPT = -lntl $(LIBGF2X) $(LIBGMP)
+
+FILES = SFMT-jump.h \
 	SFMT-jump.c \
 	SFMT-calc-jump.hpp \
 	calc-jump.cpp \
-	SFMT.607.out.txt \
-	SFMT.1279.out.txt \
-	SFMT.2281.out.txt \
-	SFMT.4253.out.txt \
-	SFMT.11213.out.txt \
-	SFMT.19937.out.txt \
-	SFMT.44497.out.txt \
-	SFMT.86243.out.txt \
-	SFMT.132049.out.txt \
-	SFMT.216091.out.txt \
 	characteristic.607.txt \
 	characteristic.1279.txt \
 	characteristic.2281.txt \
@@ -43,11 +48,12 @@ FILES = SFMTst.h \
 	Makefile \
 	test.c \
 	test-jump.cpp \
-	sample.c \
-	check-gen.sh \
+	sample1.c \
+	sample2.c \
 	check-jump.sh \
 	CHANGE-LOG.txt \
 	readme.html \
+	readme-jp.html \
 	html
 
 VERSION = 0.1
@@ -60,21 +66,42 @@ doc:
 .PHONY : tar.gz
 tar.gz: $(FILES)
 	mkdir ${DIR}
-	mkdir ${DIR}/params
-	cp -r ${FILES} ${DIR}
-	cp params/*.csv params/*.txt params/*.awk ${DIR}/params
+	mkdir ${DIR}/jump
+	mkdir ${DIR}/jump/params
+	cp -r ${FILES} ${DIR}/jump
+	cp params/*.txt ${DIR}/jump/params
 	tar czvf ${DIR}.tar.gz ${DIR}/*
 	rm -rf ${DIR}
 
 .PHONY : zip
 zip: $(FILES)
 	mkdir ${DIR}
-	mkdir ${DIR}/params
+	mkdir ${DIR}/jump
+	mkdir ${DIR}/jump/params
 	rm -f ${DIR}.zip
-	cp -r ${FILES} ${DIR}
-	cp params/*.csv params/*.txt params/*.awk ${DIR}/params
+	cp -r ${FILES} ${DIR}/jump
+	cp params/*.txt ${DIR}/jump/params
 	zip -r ${DIR}.zip ${DIR}/*
 	rm -rf ${DIR}
 
+#
+# jump
+#
+calc-characteristic: calc-characteristic.cpp SFMText.hpp SFMT-calc-jump.hpp
+	${CPP} ${CPPFLAGS} -DMAIN -o $@ calc-characteristic.cpp ${LINKOPT}
+
+test-string: test-string.cpp SFMT-calc-jump.hpp
+	${CPP} ${CPPFLAGS} -o $@ test-string.cpp ${LINKOPT}
+
+.cpp.o:
+	${CPP} -c $<
+
+.c.o:
+	${CC} ${CCFLAGS} -c $<
+
 clean:
 	rm -f *.o *~
+
+clean-all:
+	rm -rf *.o *~ *.dSYM ${ALL_STD_TARGET} ${ALL_SSE2_TARGET} \
+	${ALL_JUMP_TARGET}
