fix MSC compile error

--- a/Makefile.me
+++ b/Makefile.me
@@ -5,6 +5,7 @@ FILES = SFMT.h \
 	SFMT.c \
 	SFMT-alti.h \
 	SFMT-sse2.h \
+	SFMT-sse2-msc.h \
 	SFMT-common.h \
 	SFMT-params607.h \
 	SFMT-params1279.h \
@@ -35,7 +36,7 @@ FILES = SFMT.h \
 	README.txt \
 	html
 
-VERSION = 1.4
+VERSION = 1.4.1
 DIR = SFMT-src-${VERSION}
 
 doc:
