--- a/jump/Makefile
+++ b/jump/Makefile
@@ -3,7 +3,7 @@
 #DDEBUG = -O0 -g -ggdb -DDEBUG=1
 
 # uncomment next line if you installed NTL with gf2x
-LIBGF2X = -lgf2x
+#LIBGF2X = -lgf2x
 # uncomment next line if you installed NTL with gmp
 #LIBGMP = -lgmp
 
