--- a/jump/doxygen.cfg
+++ b/jump/doxygen.cfg
@@ -661,9 +661,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  = SFMTst.h \
-                         SFMTst.c \
-                         SFMT-jump.c \
+INPUT                  = SFMT-jump.c \
                          SFMT-calc-jump.hpp \
                          mainpage.txt
 
