Add ARM (with NEON) Support
Support ARMv7A with NEON, and ARMv8A(AArch64).
Compiled on Ubuntu 14.04 LTS x64.
Checked on qemu-arm/qemu-arch64.

--- a/Makefile.me
+++ b/Makefile.me
@@ -4,6 +4,7 @@ FILES = SFMT.h \
 	SFMT-params.h \
 	SFMT.c \
 	SFMT-alti.h \
+	SFMT-neon.h \
 	SFMT-sse2.h \
 	SFMT-sse2-msc.h \
 	SFMT-common.h \
@@ -30,14 +31,16 @@ FILES = SFMT.h \
 	FILES.txt \
 	LICENSE.txt \
 	Makefile \
+	Makefile.armv7a \
+	Makefile.aarch64 \
 	test.c \
 	check.sh \
 	CHANGE-LOG.txt \
 	README.txt \
 	html
 
-VERSION = 1.4.1
-DIR = SFMT-src-${VERSION}
+VERSION = 1.4.1r1
+DIR = SFMT-armport-src-${VERSION}
 
 doc:
 	rm -rf html
