--- a/Makefile.me
+++ b/Makefile.me
@@ -39,8 +39,8 @@ FILES = SFMT.h \
 	README.txt \
 	html
 
-VERSION = 1.4.1r1
-DIR = SFMT-armport-src-${VERSION}
+VERSION = 1.4.1.1
+DIR = SFMT-src-${VERSION}
 
 doc:
 	rm -rf html
