--- a/Makefile.me
+++ b/Makefile.me
@@ -28,6 +28,16 @@ FILES = SFMT.h \
 	SFMT.86243.out.txt \
 	SFMT.132049.out.txt \
 	SFMT.216091.out.txt \
+	SFMT.607.64.out.txt \
+	SFMT.1279.64.out.txt \
+	SFMT.2281.64.out.txt \
+	SFMT.4253.64.out.txt \
+	SFMT.11213.64.out.txt \
+	SFMT.19937.64.out.txt \
+	SFMT.44497.64.out.txt \
+	SFMT.86243.64.out.txt \
+	SFMT.132049.64.out.txt \
+	SFMT.216091.64.out.txt \
 	FILES.txt \
 	LICENSE.txt \
 	Makefile \
@@ -39,7 +49,7 @@ FILES = SFMT.h \
 	README.txt \
 	html
 
-VERSION = 1.5.1
+VERSION = 1.5.2
 DIR = SFMT-src-${VERSION}
 
 doc:
