Add CMakeLists.txt and modify .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 .o
 test-std-M*
 test-sse2-M*
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+*.exe
+lib*.a
+*.vcxproj
+*.sln
+*.filters
+.vs/
+*.user
+Debug/
+Release/
+x64/
+*.dir/
+Win32/
